# proxysql

./: meson.build  meson_options.txt
etc/: proxysql.cnf
include/: proxysql.h  thread.h
lib/: ClickHouse_Server.cpp  MySQL_Session.cpp  MySQL_Thread.cpp  ProxySQL_Admin.cpp  ProxySQL_HTTP_Server.cpp  Query_Processor.cpp  c_tokenizer.c  set_parser.cpp
src/: SQLite3_Server.cpp  meson.build
test/regextest/: client1.cpp
test/set_parser_test/: setparsertest.cpp
test/tap/tap/: SQLite3_Server.cpp
test/tap/tests/: aurora.cpp  galera_1_timeout_count.cpp  galera_2_timeout_no_count.cpp
